# proto-sync

./: .gitignore  Cargo.toml  README.md  flake.nix  proto-sync.nix
.github/workflows/: build.yaml
src/: build.rs  git.rs  lib.rs  main.rs  manifest.rs  store.rs
