[package]
name = "proto-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
auth-git2 = "0.5.4"
clap = { version = "4.5.16", features = ["derive"] }
git2 = "0.19.0"
serde = { version = "1.0.209", features = ["derive"] }
sha256 = "1.5.0"
thiserror = "1.0.63"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
